tests/ui/parser/raw/raw-str-unbalanced.stderr
error: too many `#` when terminating raw string
  --> $DIR/raw-str-unbalanced.rs:2:10
   |
LL |     r#""##
   |     -----^ help: remove the extra `#`
   |     |
   |     this raw string started with 1 `#`

error: expected one of `!` or `[`, found `#`
  --> $DIR/raw-str-unbalanced.rs:7:10
   |
LL |       "####
   |          ^ expected one of `!` or `[`

error: aborting due to 2 previous errors

